# bpm-ai-connectors-camunda-8

./: .editorconfig  .gitignore  Dockerfile  Dockerfile.prebuilt  LICENSE  README.md  connector-secrets.txt.sample  docker-compose.camunda-platform.yml  docker-compose.yml  env-subshell.sh  env.sample  pom.xml  supervisord.conf  wizard.sh
.github/: dependabot.yml
bpm-ai-connectors-c8/: .gitignore  pyproject.toml  requirements.default.txt  requirements.inference.txt
bpm-ai-connectors-c8/bpm_ai_connectors_c8/: decorators.py  feel.py  main.py  models.py  secrets.py
bpm-ai-connectors-c8/bpm_ai_connectors_c8/tasks/compose/: compose_task.py
bpm-ai-connectors-c8/bpm_ai_connectors_c8/tasks/decide/: decide_task.py
bpm-ai-connectors-c8/bpm_ai_connectors_c8/tasks/extract/: extract_task.py
bpm-ai-connectors-c8/bpm_ai_connectors_c8/tasks/generic/: generic_task.py
bpm-ai-connectors-c8/bpm_ai_connectors_c8/tasks/retrieval/: retrieval_task.py
bpm-ai-connectors-c8/bpm_ai_connectors_c8/tasks/translate/: translate_task.py
bpm-ai-connectors-c8/tests/: conftest.py  feel_mockserver.py  pytest.ini  test_compose.py  test_decide.py  test_extract.py  test_extract_ocr.py  test_extract_transcription.py  test_generic.py  test_translate.py
bpm-ai-connectors-c8/tests/bpmn/: test_compose.bpmn  test_decide_bool.bpmn  test_decide_classifier_bool.bpmn  test_decide_classifier_string.bpmn  test_decide_string.bpmn  test_decide_string_local.bpmn  test_decide_string_multi.bpmn  test_extract_faster_whisper.bpmn  test_extract_multiple.bpmn  test_extract_ocr.bpmn  test_extract_qa_multiple.bpmn  test_extract_qa_single.bpmn  test_extract_single.bpmn  test_extract_single_local.bpmn  test_extract_whisper.bpmn  test_generic.bpmn  test_translate.bpmn  test_translate_nmt.bpmn
bpmn/: example.bpmn  example_plan_execute.bpmn  process.bpmn  review_plan.form  review_step.form  task.form  test.bpmn  test_compose.bpmn
core/: pom.xml
docker/: init.py
docs/: agentic-connectors.md  base-connectors.md  custom-models.md  development.md  foundational-connectors.md  getting-started.md  local-llms.md  local-models.md  multi-modality.md  usecases.md
element-templates/: connector-gpt-compose.json  connector-gpt-database.json  connector-gpt-decide.json  connector-gpt-executor.json  connector-gpt-extract.json  connector-gpt-generic.json  connector-gpt-openapi.json  connector-gpt-planner.json  connector-gpt-process.json  connector-gpt-retrieval.json  (+2 more)
libs/bpm-ai/: pyproject.toml
libs/bpm-ai-connectors-c8/: .gitignore  pyproject.toml
libs/bpm-ai-connectors-c8/bpm_ai_connectors_c8/: config.py  decorators.py  main.py  models.py  runtime.py  secrets.py
libs/bpm-ai-connectors-c8/bpm_ai_connectors_c8/tasks/: routers.py
libs/bpm-ai-connectors-c8/bpm_ai_connectors_c8/tasks/compose/: compose_task.py
libs/bpm-ai-connectors-c8/bpm_ai_connectors_c8/tasks/decide/: decide_task.py
libs/bpm-ai-connectors-c8/bpm_ai_connectors_c8/tasks/extract/: extract_task.py
libs/bpm-ai-connectors-c8/bpm_ai_connectors_c8/tasks/foundational/compose/: compose_task.py
libs/bpm-ai-connectors-c8/bpm_ai_connectors_c8/tasks/foundational/decide/: decide_task.py
libs/bpm-ai-connectors-c8/bpm_ai_connectors_c8/tasks/foundational/extract/: extract_task.py
libs/bpm-ai-connectors-c8/bpm_ai_connectors_c8/tasks/foundational/generic/: generic_task.py
libs/bpm-ai-connectors-c8/bpm_ai_connectors_c8/tasks/foundational/translate/: translate_task.py
libs/bpm-ai-connectors-c8/bpm_ai_connectors_c8/tasks/generic/: generic_task.py
libs/bpm-ai-connectors-c8/bpm_ai_connectors_c8/tasks/rpa/: rpa_task.py
libs/bpm-ai-connectors-c8/bpm_ai_connectors_c8/tasks/translate/: translate_task.py
libs/bpm-ai-connectors-c8/tests/: conftest.py  pytest.ini  test_compose.py  test_decide.py  test_extract.py  test_generic.py  test_translate.py
libs/bpm-ai-connectors-c8/tests/bpmn/: test_decide_bool.bpmn  test_decide_string.bpmn  test_extract_multiple.bpmn  test_extract_single.bpmn  test_generic.bpmn  test_translate.bpmn
libs/bpm-ai-core/: pyproject.toml
libs/bpm-ai-core/bpm_ai_core/: testy.py
libs/bpm-ai-core/bpm_ai_core/llm/: anthropic.py  openai_chat.py
libs/bpm-ai-core/bpm_ai_core/llm/common/: function.py  image.py  llm.py  message.py  tool.py
libs/bpm-ai-core/bpm_ai_core/prompt/: prompt.py  template.py
libs/bpm-ai-core/bpm_ai_core/speech/: openai_speech.py
libs/bpm-ai-core/bpm_ai_core/speech/common/: speech.py
libs/bpm-ai-core/bpm_ai_core/testing/: test_llm.py
libs/bpm-ai-core/bpm_ai_core/tracing/: tracing.py
libs/bpm-ai-core/bpm_ai_core/util/: audio.py  file.py  image.py  json.py  openai.py
libs/bpm-ai-core/bpm_ai_core/voice/: openai_voice.py
libs/bpm-ai-core/bpm_ai_core/voice/common/: voice.py
libs/bpm-ai-core/tests/: test.prompt  test.py  test_history.prompt  test_json.py  test_prompt.py  test_simple.prompt
libs/bpm-ai-core/tests/old/: test.prompt  test.py  test_history2.prompt  test_image.prompt  test_simple.llama.prompt  test_simple.openai.prompt  test_tools.prompt
libs/bpm-ai-experimental/: pyproject.toml
libs/bpm-ai-experimental/bpm_ai_experimental/browser_agent/: agent.py  browser_agent.prompt  browser_agent2.prompt  browser_agent_executor.prompt  browser_vision_agent.prompt  dom.py  simplify_dom.py  simplify_dom_new.py
libs/bpm-ai-experimental/bpm_ai_experimental/browser_agent/prompts/: system.prompt  user.prompt
libs/bpm-ai-experimental/bpm_ai_experimental/browser_agent/util/: browser.py  injection.py  simplify_dom.py  utils.py  vision.py  vision_qa.prompt
libs/bpm-ai-experimental/tests/: browser.py  final_qa.prompt  test.py
libs/bpm-ai/bpm_ai/common/: json_utils.py  multimodal.py
libs/bpm-ai/bpm_ai/compose/: compose.openai.prompt  compose.py  util.py
libs/bpm-ai/bpm_ai/decide/: decide.openai.prompt  decide.py  schema.py
libs/bpm-ai/bpm_ai/extract/: extract.openai.prompt  extract.py
libs/bpm-ai/bpm_ai/generic/: generic.openai.prompt  generic.py
libs/bpm-ai/bpm_ai/translate/: schema.py  translate.openai.prompt  translate.py
libs/bpm-ai/tests/: compose.py  decide.py  extract.py  generic.py  translate.py
(+476 files in other folders)
