[tool.poetry]
name = "bpm-ai-connectors-c8"
version = "1.3.7"
description = "AI connectors for Camunda 8 based on the bpm-ai project."
authors = ["Bennet Krause <bennet.krause@holisticon.de>"]
repository = "https://github.com/holunda-io/bpm-ai-connectors-camunda-8"
homepage = "https://www.holisticon.de/"
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pyzeebe = "^3.0.4"
pydantic = "^2.5.3"
argparse = "^1.4.0"
bpm-ai = "1.7.4"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^0.23.3"
pytest-zeebe = "^0.1.1"
protobuf = "^3.20.3"
pytest-timeout = "^2.2.0"
pytest-xprocess = "^0.23.0"
testcontainers = "^3.7.1"
flask = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
