[tool.poetry]
name = "bpm-ai-connectors-c8"
version = "0.1.0"
description = ""
authors = ["Bennet Krause <bennet.krause@holisticon.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyzeebe = "^3.0.4"
bpm-ai = { path = "../bpm-ai", develop = true }
pydantic = "^2.5.2"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
