[tool.poetry]
name = "bpm-ai-core"
version = "0.1.2"
description = ""
authors = ["Benjoyo <bennet.krause@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = {version = "^1.2.0", allow-prereleases = true}
pytest = "^7.4.2"
pytest-dotenv = "^0.5.2"
jinja2 = "^3.1.2"
tenacity = "^8.2.3"
langsmith = "^0.0.60"
pydantic = "^2.4.2"
pydub = "^0.25.1"
ffmpeg = "^1.4"
pyaudio = "^0.2.14"
speechrecognition = "^3.10.0"
pillow = "^10.1.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
