[tool.poetry]
name = "bpm-ai-core"
version = "0.1.3"
description = ""
authors = ["Bennet Krause <bennet.krause@holisticon.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = {version = "^1.5.0"}
jinja2 = "^3.1.2"
tenacity = "^8.2.3"
langsmith = "^0.0.71"
pydantic = "^2.5.2"
pillow = "^10.1.0"
requests = "^2.31.0"
anthropic = "^0.7.8"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-dotenv = "^0.5.2"

[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
