[tool.poetry]
name = "bpm-ai"
version = "0.1.0"
description = ""
authors = ["Bennet Krause <bennet.krause@holisticon.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bpm-ai-core = { path = "../bpm-ai-core", develop = true }
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
